--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Pitang</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">Sobre a Pitang</a>
-            <a href="#">Contato</a>
+            <a href="sobre-a-pitang.html" rel="next" target="_self">Sobre a Pitang</a>
+            <a href="contato.html" rel="next" target="_self">Contato</a>
             <a href="Entrar.html">Entrar</a>
+
         </nav>
     </header>
     
