--- a/entrar.html
+++ b/entrar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrar - Pitang</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         /* Estilo CSS para os campos de entrada */
         input[type="text"],
@@ -21,8 +22,8 @@
 <body>
     <header>
         <nav>
-            <a href="Home.html">Sobre a Pitang</a>
-            <a href="Home.html">Contato</a>
+            <a href="sobre-a-pitang.html" rel="next" target="_self">Sobre a Pitang</a>
+            <a href="contato.html" rel="next" target="_self" >Contato</a>
             <a href="Entrar.html">Entrar</a>
         </nav>
     </header>
