--- a/listagem-clientes.html
+++ b/listagem-clientes.html
@@ -23,10 +23,8 @@
     <!-- Barra de navegação -->
     <nav>
         <!-- Links de navegação -->
-        <a href="#">Sobre a Pitang</a>
-        <a href="#">Contato</a>
-        <a href="Login.html" rel="next" target="_self">Entrar</a>
         <a href="listagem-clientes.html" id="listagemClientesLink">Listagem de Clientes</a>
+        <a href="entrar.html" rel="next" target="_self"> Sair </a>
         <a href="visualizar-cliente.html" id="visualizacaoClienteLink" style="display: none;">Visualizar Cliente</a>
         <a href="editar-cliente.html" id="editarClienteLink" style="display: none;">Editar Cliente</a>
     </nav>
