--- a/visualizar-cliente.html
+++ b/visualizar-cliente.html
@@ -13,10 +13,8 @@
    
     <!-- Barra de navegação com links para outras páginas e opção de login. -->
     <nav>
-        <a href="#">Sobre a Pitang</a>
-        <a href="#">Contato</a>
-        <a href="Login.html" rel="next" target="_self">Entrar</a>
         <a href="listagem-clientes.html">Listagem de Clientes</a>
+        <a href="entrar.html" rel="next" target="_self"> Sair </a>
         <!-- Links ocultos que serão usados dinamicamente. -->
         <a href="#" id="visualizacaoClienteLink" style="display: none;">Visualizar Cliente</a>
         <a href="#" id="editarClienteLink" style="display: none;">Editar Cliente</a>
