--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <nav>
+            <a href="index.html"><img src="imagens/logo4.png"></a>
             <a href="sobre-a-pitang.html" rel="next" target="_self">Sobre a Pitang</a>
             <a href="contato.html" rel="next" target="_self">Contato</a>
             <a href="Entrar.html">Entrar</a>
@@ -19,7 +20,7 @@
     </header>
     
     <main class="content">
-        <img src="Grupo 22078.png" alt="Imagem da Pitang" class="full-width-image">
+<img src="imagens/inicial.jpeg" alt="Imagem da Pitang" class="full-width-image">
     </main>
 
     <footer>
