--- a/sobre-a-pitang.html
+++ b/sobre-a-pitang.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a Pitang</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="imagens/favicon.ico">
 
 </head>
 <body>
