--- a/visualizar-cliente.html
+++ b/visualizar-cliente.html
@@ -7,12 +7,13 @@
     <!-- Inclui o arquivo CSS externo para estilização da página. -->
     <link rel="stylesheet" href="style.css">
     <!-- Define o ícone da página exibido na aba do navegador. -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="imagens/favicon.ico">
 </head>
 <body>
    
     <!-- Barra de navegação com links para outras páginas e opção de login. -->
     <nav>
+        <a href="index.html"><img src="imagens/logo4.png"></a>
         <a href="listagem-clientes.html">Listagem de Clientes</a>
         <a href="entrar.html" rel="next" target="_self"> Sair </a>
         <!-- Links ocultos que serão usados dinamicamente. -->
