--- a/contato.html
+++ b/contato.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="imagens/favicon.ico">
 </head>
 <body>
     <nav>
+        <a href="index.html"><img src="imagens/logo4.png"></a>
         <a href="sobre-a-pitang.html" rel="next" target="_self">Sobre a Pitang</a>        
         <a href="contato.html" rel="next" target="_self">Contato</a>
         <a href="entrar.html" rel="next" target="_self">Entrar</a>
