--- a/editar-cliente.html
+++ b/editar-cliente.html
@@ -12,6 +12,8 @@
 
     <!-- Título da página exibido na aba do navegador -->
     <title>Editar Cliente</title>
+    <link rel="shortcut icon" href="favicon.ico" type="imagens/favicon.ico">
+
 </head>
 <body>
     <!-- Barra de navegação -->
