--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -14,12 +14,13 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Ícone da página exibido na aba do navegador -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="imagens/favicon.ico">
 </head>
 <body>
     <!-- Barra de navegação -->
     <nav>
         <!-- Links de navegação -->
+        <a href="index.html"><img src="imagens/logo4.png"></a>
 
         <!-- Link para a página de listagem de clientes (inicialmente oculto) -->
         <a href="listagem-clientes.html" id="listagemClientesLink">Listagem de Clientes</a>
