--- a/editar-cliente.html
+++ b/editar-cliente.html
@@ -19,6 +19,7 @@
     <!-- Barra de navegação -->
     <nav>
         <!-- Links de navegação -->
+        <a href="index.html"><img src="imagens/logo4.png"></a>
         <a href="listagem-clientes.html" id="listagemClientesLink">Listagem de Clientes</a>
         <a href="entrar.html" rel="next" target="_self"> Sair </a>
         <a href="visualizar-cliente.html" id="visualizacaoClienteLink" style="display: none;">Visualizar Cliente</a>
