--- a/entrar.html
+++ b/entrar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrar - Pitang</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="imagens/favicon.ico">
     <style>
         /* Estilo CSS para os campos de entrada */
         input[type="text"],
@@ -22,6 +22,7 @@
 <body>
     <header>
         <nav>
+            <a href="index.html"><img src="imagens/logo4.png"></a>
             <a href="sobre-a-pitang.html" rel="next" target="_self">Sobre a Pitang</a>
             <a href="contato.html" rel="next" target="_self" >Contato</a>
             <a href="Entrar.html">Entrar</a>
