--- a/listagem-clientes.html
+++ b/listagem-clientes.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Ícone exibido na aba do navegador -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="imagens/favicon.ico">
 
     <!-- Vinculação do arquivo CSS novamente (pode ser removido) -->
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -23,6 +23,7 @@
     <!-- Barra de navegação -->
     <nav>
         <!-- Links de navegação -->
+        <a href="index.html"><img src="imagens/logo4.png"></a>
         <a href="listagem-clientes.html" id="listagemClientesLink">Listagem de Clientes</a>
         <a href="entrar.html" rel="next" target="_self"> Sair </a>
         <a href="visualizar-cliente.html" id="visualizacaoClienteLink" style="display: none;">Visualizar Cliente</a>
